--- a/style.css
+++ b/style.css
@@ -2,9 +2,16 @@
     border: 1px solid black;
 } */
 
+h1 {
+    text-align: center;
+    margin: auto;
+}
+
 #content-div {
     min-height: 95vh;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
@@ -19,7 +26,7 @@
 
 }
 
-.board-square {
+.game-grid {
     font-weight: bold;
     font-size: 300%;
     background: rgb(255, 255, 255);
