--- a/style.css
+++ b/style.css
@@ -12,21 +12,30 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
+#message-div {
+    font-size: 26px;
+    text-align: center;
+    height: 30px;
+    width: 200px;
+}
 
 #board-div {
     background: black;
     display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    grid-gap:3px;
+    grid-template-columns: repeat(3, minmax(0,1fr));
+    grid-template-rows: repeat(3, minmax(0,1fr));
+    grid-gap:2px;
     height: 50vh;
     width: 30%;
     margin: auto;
-
+    min-width: 400px;
 }
 
 .game-grid {
+
     font-weight: bold;
     font-size: 300%;
     background: rgb(255, 255, 255);
