--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
 } */
 
 h1 {
+    color: white;
     text-align: center;
     margin: auto;
 }
 
 #content-div {
+    background: black;
     min-height: 95vh;
     display: flex;
     flex-direction: column;
@@ -15,7 +17,18 @@ h1 {
     align-items: center;
 }
 
+#turn-div {
+    font-size: 30px;
+    color: white;
+    background: black;
+    position: absolute;
+    left: 10%;
+    top: 50%;
+}
+
+
 #message-div {
+    color: white;
     font-size: 26px;
     text-align: center;
     height: 30px;
@@ -23,11 +36,12 @@ h1 {
 }
 
 #board-div {
-    background: black;
+    color: white;
+    background: white;
     display: grid;
     grid-template-columns: repeat(3, minmax(0,1fr));
     grid-template-rows: repeat(3, minmax(0,1fr));
-    grid-gap:2px;
+    grid-gap:1px;
     height: 50vh;
     width: 30%;
     margin: auto;
@@ -38,7 +52,7 @@ h1 {
 
     font-weight: bold;
     font-size: 300%;
-    background: rgb(255, 255, 255);
+    background: black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -47,4 +61,9 @@ h1 {
 
 .board-square:hover {
     background: rgb(240, 240, 240);
+}
+
+
+#btn-reset {
+    margin-bottom: 15px;
 }
